--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <!-- JavaScript -->
     <script src="js/main.js" defer></script>
-    <title>JavaScript Assignment - Blog Post</title>
+    <title>JavaScript - Blog Post</title>
 </head>
 <body>
     <header>
@@ -35,7 +35,7 @@
     </main>
     <footer>
         <p>
-            <span>&copy; JavaScript Assignment - Blog Post</span>
+            <span>&copy; Blog Post</span>
         </p>
     </footer>
 </body>
